# next-ai-draw-io

./: .gitignore  .mcp.json  BUILD_STANDALONE.md  CLAUDE.md  Dockerfile  ENV_SETUP.md  README.md  README_CN.md  README_JA.md  TAURI_QUICKSTART.md  TAURI_READY.md  biome.json  ec2-push-script.sh  env.example  instrumentation.ts  next.config.ts  package-lock.json  package.json
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
components/: chat-example-panel.tsx  chat-input.tsx  chat-message-display.tsx  chat-panel.tsx  code-block.tsx  file-preview-list.tsx  history-dialog.tsx  model-config-dialog.tsx  model-selector.tsx  quota-limit-toast.tsx  save-dialog.tsx  settings-dialog.tsx
contexts/: diagram-context.tsx  environment-context.tsx
docs/: README_CN.md  README_JA.md  RUST_CHAT_INTEGRATION.md  TAURI_BUILD_GUIDE.md  TAURI_CHAT_QUICKSTART.md  WINDOWS_BUILD_ISSUE.md  ai-providers.md  desktop-testing-plan.md  offline-deployment.md  self-hosted-drawio.md
hooks/: useEnvironment.ts  useFileSystem.ts  useUpdater.ts
icons/: icon.icns
icons_new/: icon.icns
lib/: ai-providers.ts  desktop-environment.ts  langfuse.ts  pdf-utils.ts  system-prompts.ts  tauri-chat-types.ts  tauri-env.ts  token-counter.ts  use-tauri-chat.ts  utils.ts
openspec/: project.md
out-web/: package.json  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  start-server.bat  start-server.sh
src-tauri/capabilities/: default.json
src-tauri/src/: ai_chat.rs  ai_commands.rs  commands.rs  lib.rs  main.rs
(+40 files in other folders)
