[package]
name = "next-ai-draw-io"
version = "0.4.0"
description = "AI-Powered Diagram Creation Tool - Chat, Draw, Visualize"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.6"
tauri-plugin-dialog = "2.0.6"
tauri-plugin-updater = "2.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "next-ai-draw-io"
path = "src/main.rs"
